--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-json-view-compare": "^2.0.1",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
